syntax = "proto3";

message _RawSolanaTransaction {
  string signature                      = 1;  // Transaction signature (base58)
  uint64 fee                            = 2;  // Transaction fee in lamports
  
  message _Instruction {
    string programId                     = 1;  // Program ID (base58)
    repeated string accounts             = 2;  // Account addresses (base58)
    optional bytes data                  = 3;  // Instruction data
  }
  repeated _Instruction instructions     = 3;
  
  repeated string accountKeys            = 4;  // All account keys involved in transaction
  
  message _Block {
    optional uint64 slot                 = 1;  // Solana slot number
    optional uint64 blockTime            = 2;  // Block timestamp
  }
  optional _Block block                  = 5;
  
  optional uint64 recentBlockhash        = 6;  // Recent blockhash (base58)
  optional uint32 version                = 7;  // Transaction version
}
